@@ -24,8 +24,9 @@ License: LGPL-3+
  Public License can be found in `/usr/share/common-licenses/LGPL-3'.
 
 Files: *
-Copyright: 2004 Andrew Tridgell <tridge@samba.org>
-Copyright: 2006 Stefan Metzmacher <metze@samba.org>
+Copyright:
+  2004 Andrew Tridgell <tridge@samba.org>
+  2006 Stefan Metzmacher <metze@samba.org>
 License: LGPL-3+
  This library is free software; you can redistribute it and/or
  modify it under the terms of the GNU Lesser General Public
